src/test/ui/iterators/bound.rs
struct S<I: Iterator>(I);
struct T(S<u8>);
fn main() {}
